--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   },
   "devDependencies": {
     "@types/jest": "^23.1.3",
-    "jest": "^23.2.0",
+    "eslint": "^5.0.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.1",
+    "eslint-plugin-typescript": "^0.12.0",
+    "prettier": "1.13.7",
     "ts-jest": "^22.4.6",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "typescript-eslint-parser": "^16.0.1"
   },
   "dependencies": {},
   "jest": {
