--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "repository": "https://github.com/envoy/gjallarhornjs",
   "scripts": {
-    "test": "jest"
+    "test": "jest && yarn lint",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^23.1.3",
@@ -15,7 +16,9 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.1",
     "eslint-plugin-typescript": "^0.12.0",
+    "jest": "^23.2.0",
     "prettier": "1.13.7",
+    "rimraf": "^2.6.2",
     "ts-jest": "^22.4.6",
     "typescript": "^2.9.2",
     "typescript-eslint-parser": "^16.0.1"
@@ -27,15 +30,15 @@
       "js"
     ],
     "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
+      "^.+\\.ts$": "ts-jest"
     },
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "tsconfig.json"
+        "tsConfigFile": "./ts/jest.tsconfig.json"
       }
     },
     "testMatch": [
-      "**/__tests__/*.+(ts|js)"
+      "**/__tests__/*.+(ts)"
     ]
   }
 }
