--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "description": "A library for timing things",
   "author": "Chris Freeman",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
+  "types": "dist/types/index.d.ts",
   "repository": "https://github.com/envoy/gjallarhornjs",
   "scripts": {
+    "ts:cjs": "tsc -p ts/cjs.tsconfig.json",
+    "ts:es": "tsc -p ts/es.tsconfig.json",
+    "ts:typedefs": "tsc --emitDeclarationOnly",
+    "ts:all": "yarn ts:cjs && yarn ts:es && yarn ts:typedefs",
+    "clean": "rimraf dist",
+    "build": "yarn clean && yarn ts:all",
+    "lint": "eslint src/*.ts __tests__/*.ts",
     "test": "jest && yarn lint",
     "test:watch": "jest --watch"
   },
