--- a/package.json
+++ b/package.json
@@ -2,52 +2,54 @@
   "name": "gjallarhornjs",
   "version": "0.0.0",
   "description": "A library for timing things",
-  "author": "Chris Freeman",
   "license": "MIT",
+  "repository": "https://github.com/envoy/gjallarhornjs",
+  "author": "Chris Freeman",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
-  "types": "dist/types/index.d.ts",
-  "repository": "https://github.com/envoy/gjallarhornjs",
   "scripts": {
-    "ts:cjs": "tsc -p ts/cjs.tsconfig.json",
-    "ts:es": "tsc -p ts/es.tsconfig.json",
-    "ts:typedefs": "tsc --emitDeclarationOnly",
-    "ts:all": "yarn ts:cjs && yarn ts:es && yarn ts:typedefs",
-    "clean": "rimraf dist",
     "build": "yarn clean && yarn ts:all",
+    "clean": "rimraf dist",
+    "format": "yarn lint --fix && yarn format-package --write",
     "lint": "eslint src/*.ts __tests__/*.ts",
     "test": "jest && yarn lint",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "ts:all": "yarn ts:cjs && yarn ts:es && yarn ts:typedefs",
+    "ts:cjs": "tsc -p ts/cjs.tsconfig.json",
+    "ts:es": "tsc -p ts/es.tsconfig.json",
+    "ts:typedefs": "tsc --emitDeclarationOnly"
   },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "./ts/jest.tsconfig.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testMatch": [
+      "**/__tests__/*.+(ts)"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    }
+  },
+  "types": "dist/types/index.d.ts",
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^23.1.3",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.1",
     "eslint-plugin-typescript": "^0.12.0",
+    "format-package": "^4.5.0",
     "jest": "^23.2.0",
     "prettier": "1.13.7",
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.6",
     "typescript": "^2.9.2",
     "typescript-eslint-parser": "^16.0.1"
-  },
-  "dependencies": {},
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "./ts/jest.tsconfig.json"
-      }
-    },
-    "testMatch": [
-      "**/__tests__/*.+(ts)"
-    ]
   }
 }
