--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "ts:es": "tsc -p ts/es.tsconfig.json",
     "ts:typedefs": "tsc --emitDeclarationOnly"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format"
+    }
+  },
   "jest": {
     "globals": {
       "ts-jest": {
@@ -45,6 +50,7 @@
     "eslint-plugin-prettier": "^2.6.1",
     "eslint-plugin-typescript": "^0.12.0",
     "format-package": "^4.5.0",
+    "husky": "^1.0.0-rc.9",
     "jest": "^23.2.0",
     "prettier": "1.13.7",
     "rimraf": "^2.6.2",
